adding and changing page content

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,16 @@
 {
     "cSpell.ignoreWords": [
+        "adduol",
         "camelcasing",
         "chaitanyatekne",
         "chun",
         "monakai",
         "monokai",
+        "rajnandani",
+        "sakshi",
         "sonu",
-        "tekane"
+        "tekane",
+        "vaishnavi",
+        "vrushali"
     ]
 }
