getting and setting attributes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,19 @@
 {
     "cSpell.ignoreWords": [
         "adduol",
+        "allgood",
         "camelcasing",
         "chaitanyatekne",
         "chun",
         "monakai",
         "monokai",
+        "notgood",
         "rajnandani",
         "sakshi",
         "sonu",
         "tekane",
         "vaishnavi",
-        "vrushali"
+        "vrushali",
+        "youtube"
     ]
 }
