changing css styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "camelcasing",
         "chaitanyatekne",
         "chun",
+        "hypen",
         "monakai",
         "monokai",
         "notgood",
