adding and removing classes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "notgood",
         "rajnandani",
         "sakshi",
+        "sanjivani",
         "sonu",
         "tekane",
         "vaishnavi",
