--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "chaitanyatekne",
         "chun",
         "hypen",
+        "limegreen",
         "monakai",
         "monokai",
         "notgood",
@@ -14,6 +15,7 @@
         "sanjivani",
         "sonu",
         "tekane",
+        "uptil",
         "vaishnavi",
         "vrushali",
         "youtube"
